feat: Add DTS setting for skipping startup calibration.

--- a/dts/bindings/kscan/zmk,kscan-ec-matrix.yaml
+++ b/dts/bindings/kscan/zmk,kscan-ec-matrix.yaml
@@ -8,6 +8,8 @@ compatible: "zmk,kscan-ec-matrix"
 include: [kscan.yaml, pinctrl-device.yaml]
 
 properties:
+  skip-startup-calibration:
+    type: boolean
   active-polling-interval-ms:
     type: int
     default: 1
