feat: Add precalib-avg- lows/highs for OOTB setup.
Add the ability to set `precalib-avg-lows` and `precalib-avg-highs`
props with arrays of calibration data, and add new `export` shell
command to export that data from a fully calibrated device, allowing
for some sane default values for basic functionality before running
a proper calibration for the specific calibrated keyboard.

--- a/dts/bindings/kscan/zmk,kscan-ec-matrix.yaml
+++ b/dts/bindings/kscan/zmk,kscan-ec-matrix.yaml
@@ -48,6 +48,12 @@ properties:
     type: phandle-array
   io-channels:
     required: true
+  precalib-avg-lows:
+    type: array
+    description: Pre-seeded avg low calibration values
+  precalib-avg-highs:
+    type: array
+    description: Pre-seeded avg high calibration values
   
   pinctrl-0:
     required: false
